<resources>

    <string name="app_name">Ryanair</string>

    <!-- General -->
    <string name="general_network_not_available">Looks like internet is not available. Please check your network connection and try again.</string>
    <string name="general_critical_error">Ups… Something went wrong</string>

    <!-- Main Screen-->
    <string name="origin_station">Origin station</string>
    <string name="destination_station">Destination station</string>
    <string name="departure_date">Departure date</string>
    <string name="adults_label">#adults</string>
    <string name="teens_label">#teens</string>
    <string name="children_label">#children</string>
    <string name="search">search</string>

    <!-- Search result screen -->
    <string name="current_maximum_price">Current maximum price: %1$s</string>
    <string name="price">%1$.2f %2$s</string>

    <!-- Flight detail screen-->
    <string name="regular_fare">Regular fare: %1$.2f %2$s</string>
    <string name="flight_date">Flight date: %1$s</string>

    <!-- SCREEN TITLES -->
    <string name="main_screen_title">Find your flight</string>
    <string name="search_result_screen_title">%1$s -> %2$s</string>
    <string name="stations_list_screen_title">Select airport</string>
    <string name="detail_screen_title">Flight: %1$s</string>
    <string name="no_results_found">No results found</string>
    <string name="no_data">no data</string>
    <string name="origin">Origin: %1$s</string>
    <string name="destination">Destination: %1$s</string>
    <string name="infants_left">Infants left: %1$d</string>
    <string name="fare_class">Fare class: %1$s</string>
    <string name="discount">Discount: %1$d percent</string>

</resources>
