<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature.detail.ui.FlightDetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarNoInset"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/colorPrimary"
        tools:title="Toolbar title"
        tools:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/material_baseline_grid_2x"
        android:orientation="vertical">

        <TextView
            android:id="@+id/flightDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_normal"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:text="28/09/2018" />

        <TextView
            android:id="@+id/regularFareView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_normal"
            android:layout_marginTop="@dimen/material_baseline_grid_1x"
            tools:text="Regular fare: 120$"/>

        <TextView
            android:id="@+id/originTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_normal"
            android:layout_marginTop="@dimen/material_baseline_grid_1x"
            tools:text="@string/origin"/>

        <TextView
            android:id="@+id/destinationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_normal"
            android:layout_marginTop="@dimen/material_baseline_grid_1x"
            tools:text="@string/destination"/>

        <TextView
            android:id="@+id/infantsLeftTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_normal"
            android:layout_marginTop="@dimen/material_baseline_grid_1x"
            tools:text="@string/infants_left"/>

        <TextView
            android:id="@+id/fareClassTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_normal"
            android:layout_marginTop="@dimen/material_baseline_grid_1x"
            tools:text="@string/fare_class"/>

        <TextView
            android:id="@+id/discountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_normal"
            android:layout_marginTop="@dimen/material_baseline_grid_1x"
            tools:text="@string/discount"/>

    </LinearLayout>

</LinearLayout>