<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature.mainscreen.ui.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarNoInset"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/colorPrimary"
        tools:title="Toolbar title"
        tools:titleTextColor="@color/white" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/originStationTextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_baseline_grid_2x"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/originStationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/origin_station"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/destinationStationTextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_baseline_grid_2x"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/originStationTextInput">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/destinationStationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/destination_station"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/departureDateTextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_baseline_grid_2x"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/destinationStationTextInput">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/departureDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/departure_date"
            android:inputType="date"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_baseline_grid_2x"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/departureDateTextInput">

        <com.damiankwasniak.ryanair.ui.widget.StepperView
            android:id="@+id/numberOfAdultsStepper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:label="@string/adults_label"
            app:layout_constraintEnd_toStartOf="@id/numberOfTeensStepper"
            app:layout_constraintStart_toStartOf="parent" />

        <com.damiankwasniak.ryanair.ui.widget.StepperView
            android:id="@+id/numberOfTeensStepper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:label="@string/teens_label"
            app:layout_constraintEnd_toStartOf="@id/numberOfChildrenStepper"
            app:layout_constraintStart_toEndOf="@id/numberOfAdultsStepper" />

        <com.damiankwasniak.ryanair.ui.widget.StepperView
            android:id="@+id/numberOfChildrenStepper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:label="@string/children_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/numberOfTeensStepper" />
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/material_baseline_grid_4x"
        android:text="@string/search"
        />

    <android.support.constraint.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/material_baseline_grid_2x" />

    <android.support.constraint.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/material_baseline_grid_2x" />

</android.support.constraint.ConstraintLayout>